@@ -21,6 +21,7 @@ import org.apache.commons.cli.CommandLineParser;
 import org.apache.commons.cli.DefaultParser;
 import org.apache.commons.cli.Option;
 import org.apache.commons.cli.Options;
+import org.apache.commons.cli.ParseException;
 import org.apache.commons.cli.UnrecognizedOptionException;
 import org.jline.terminal.Size;
 import org.jline.terminal.impl.LineDisciplineTerminal;
@@ -66,7 +67,11 @@ class MainTest {
 	@ParameterizedTest
 	@ValueSource(strings = { "jackson2", "jackson3", "fastjson2", "gson", "jakarta" })
 	void readsMultipleInputDocumentsWithSelectedJsonProvider(String provider) throws Exception {
-		assertThat(run("1 2\n{\"a\":3}\n[4,5] \"six\" null true", "--json-provider", provider, "--compact", "."))
+		assertThat(run("""
+				1 2
+				{"a":3}
+				[4,5] "six" null true\
+				""", "--json-provider", provider, "--compact", "."))
 				.isEqualTo("1\n2\n{\"a\":3}\n[4,5]\n\"six\"\nnull\ntrue\n");
 	}
 
@@ -81,19 +86,21 @@ class MainTest {
 	@ValueSource(strings = { "jackson2", "jackson3", "fastjson2", "gson", "jakarta" })
 	void prettyPrintsLikeJqByDefault(String provider) throws Exception {
 		assertThat(run("{\"a\":[1,2,{\"b\":null}],\"c\":{},\"d\":[],\"e\":\"<&>\"}", "--json-provider", provider, "."))
-				.isEqualTo(""
-						+ "{\n"
-						+ "  \"a\": [\n"
-						+ "    1,\n"
-						+ "    2,\n"
-						+ "    {\n"
-						+ "      \"b\": null\n"
-						+ "    }\n"
-						+ "  ],\n"
-						+ "  \"c\": {},\n"
-						+ "  \"d\": [],\n"
-						+ "  \"e\": \"<&>\"\n"
-						+ "}\n");
+				.isEqualTo("""
+						\
+						{
+						  "a": [
+						    1,
+						    2,
+						    {
+						      "b": null
+						    }
+						  ],
+						  "c": {},
+						  "d": [],
+						  "e": "<&>"
+						}
+						""");
 	}
 
 	@ParameterizedTest
@@ -114,7 +121,12 @@ class MainTest {
 
 	@Test
 	void readsMultiLineQueryWithCommentsFromFile(@TempDir Path dir) throws Exception {
-		Path query = write(dir, "query.jq", "#!/usr/bin/env jq -f\n# doubles .foo\n.foo\n\t| . * 2\n");
+		Path query = write(dir, "query.jq", """
+				#!/usr/bin/env jq -f
+				# doubles .foo
+				.foo
+				\t| . * 2
+				""");
 		assertThat(run("{\"foo\":21}", "--compact", "-f", query.toString()))
 				.isEqualTo("42\n");
 	}
@@ -269,20 +281,24 @@ class MainTest {
 	void warnsOnStderrAboutACommaOperandOfAPipe() throws Exception {
 		assertThat(run("{\"a\":1,\"b\":2}", "--compact", ".a, .b | .")).isEqualTo("1\n2\n");
 		assertThat(runStderr("{\"a\":1,\"b\":2}", "--compact", ".a, .b | ."))
-				.isEqualTo("jq: warning: `,` binds tighter than `|`: write `(.a, .b)` to make the grouping explicit"
-						+ " at line 1, column 1:\n"
-						+ "    .a, .b | .\n"
-						+ "    ^\n");
+				.isEqualTo("""
+						jq: warning: `,` binds tighter than `|`: write `(.a, .b)` to make the grouping explicit\
+						 at line 1, column 1:
+						    .a, .b | .
+						    ^
+						""");
 	}
 
 	@Test
 	void warnsOnStderrAboutABindingPipeAfterAComma() throws Exception {
 		assertThat(run("null", "--compact", "1 + 1, 2 as $a | $a + 1")).isEqualTo("2\n3\n");
 		assertThat(runStderr("null", "--compact", "1 + 1, 2 as $a | $a + 1"))
-				.isEqualTo("jq: warning: `as` binds only `2`: write `(2 as $a | $a + 1)` to make the grouping explicit"
-						+ " at line 1, column 8:\n"
-						+ "    1 + 1, 2 as $a | $a + 1\n"
-						+ "           ^\n");
+				.isEqualTo("""
+						jq: warning: `as` binds only `2`: write `(2 as $a | $a + 1)` to make the grouping explicit\
+						 at line 1, column 8:
+						    1 + 1, 2 as $a | $a + 1
+						           ^
+						""");
 	}
 
 	@Test
@@ -335,7 +351,7 @@ class MainTest {
 
 	@ParameterizedTest
 	@ValueSource(strings = { "--max-string-length", "--max-binary-length", "--max-array-length", "--max-object-member-count", "--max-user-defined-function-calls", "--max-outputs-per-expression" })
-	void rejectsInvalidRuntimeLimits(String option) throws Exception {
+	void rejectsInvalidRuntimeLimits(String option) {
 		assertThatIllegalArgumentException()
 				.isThrownBy(() -> Main.createRuntimeOptions(parseLimits(option, "-1")))
 				.withMessage("invalid " + option + ": -1 (expected a non-negative integer)");
@@ -429,12 +445,12 @@ class MainTest {
 			System.setErr(originalErr);
 		}
 
-		assertThat(new String(out.toByteArray(), StandardCharsets.UTF_8)).isEqualTo("{\"x\":123}\n");
-		assertThat(new String(err.toByteArray(), StandardCharsets.UTF_8)).isEqualTo("jackson-jq -c -- '.'\n");
+		assertThat(out.toString(StandardCharsets.UTF_8)).isEqualTo("{\"x\":123}\n");
+		assertThat(err.toString(StandardCharsets.UTF_8)).isEqualTo("jackson-jq -c -- '.'\n");
 	}
 
 	@Test
-	void parsesInteractiveNullInputAsClusteredShortOptions() throws Exception {
+	void parsesInteractiveNullInputAsClusteredShortOptions() throws ParseException {
 		Options options = interactiveNullInputOptions();
 
 		CommandLine clustered = Main.createCommandLineParser().parse(options, new String[] { "-in" });
@@ -462,7 +478,7 @@ class MainTest {
 	}
 
 	@Test
-	void testCreateDefaultRunnerWhenDevTtyAvailable() throws Exception {
+	void testCreateDefaultRunnerWhenDevTtyAvailable() {
 		if (new File("/dev/tty").exists()) {
 			try (TuiRunner runner = Main.createDefaultRunner()) {
 				assertThat(runner).isNotNull();
@@ -522,16 +538,16 @@ class MainTest {
 			System.setErr(originalErr);
 		}
 
-		assertThat(new String(out.toByteArray(), StandardCharsets.UTF_8)).isEqualTo("null\n");
+		assertThat(out.toString(StandardCharsets.UTF_8)).isEqualTo("null\n");
 		String expectedCommand = inputFiles.isEmpty()
 				? "jackson-jq -n -- '.'\n"
 				: "jackson-jq -n -- '.' '-'\n";
-		assertThat(new String(err.toByteArray(), StandardCharsets.UTF_8)).isEqualTo(expectedCommand);
+		assertThat(err.toString(StandardCharsets.UTF_8)).isEqualTo(expectedCommand);
 	}
 
 	private static Path write(Path dir, String name, String content) throws Exception {
 		Path file = dir.resolve(name);
-		Files.write(file, content.getBytes(StandardCharsets.UTF_8));
+		Files.writeString(file, content);
 		return file;
 	}
 
@@ -547,21 +563,14 @@ class MainTest {
 	}
 
 	private static String run(String input, String... args) throws Exception {
-		return capture(input, args).out;
+		return capture(input, args).out();
 	}
 
 	private static String runStderr(String input, String... args) throws Exception {
-		return capture(input, args).err;
+		return capture(input, args).err();
 	}
 
-	private static final class Captured {
-		final String out;
-		final String err;
-
-		Captured(String out, String err) {
-			this.out = out;
-			this.err = err;
-		}
+	private record Captured(String out, String err) {
 	}
 
 	private static synchronized Captured capture(String input, String... args) throws Exception {
@@ -575,8 +584,8 @@ class MainTest {
 			System.setOut(new PrintStream(output));
 			System.setErr(new PrintStream(errors));
 			Main.main(args);
-			return new Captured(new String(output.toByteArray(), StandardCharsets.UTF_8),
-					new String(errors.toByteArray(), StandardCharsets.UTF_8));
+			return new Captured(output.toString(StandardCharsets.UTF_8),
+					errors.toString(StandardCharsets.UTF_8));
 		} finally {
 			System.setIn(originalIn);
 			System.setOut(originalOut);
