@@ -1,7 +1,6 @@
 package net.thisptr.jackson.jq.v2.core;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
@@ -26,8 +25,7 @@ import net.thisptr.jackson.jq.v2.spi.exception.JsonQueryException;
 import net.thisptr.jackson.jq.v2.spi.path.UntrackedPath;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 public class RuntimeBindingsTest {
 	/**
@@ -46,9 +44,9 @@ public class RuntimeBindingsTest {
 				.build();
 		JsonQuery<JsonNode> query = env.compile("$value");
 
-		assertThat(run(query, bindingsWithVariable("value", 1))).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(MAPPER.readTree("1")));
-		assertThat(run(query, bindingsWithVariable("value", 2))).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(MAPPER.readTree("2")));
-		assertThat(run(query, bindingsWithVariable("value", 3))).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(MAPPER.readTree("3")));
+		assertThat(run(query, bindingsWithVariable("value", 1))).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(MAPPER.readTree("1")));
+		assertThat(run(query, bindingsWithVariable("value", 2))).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(MAPPER.readTree("2")));
+		assertThat(run(query, bindingsWithVariable("value", 3))).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(MAPPER.readTree("3")));
 	}
 
 	@Test
@@ -58,7 +56,7 @@ public class RuntimeBindingsTest {
 				.defineVariable("value", () -> JSON_PROVIDER.createNumber(counter.incrementAndGet()))
 				.build();
 
-		assertThat(run(env.compile("[$value, $value]"))).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(MAPPER.readTree("[1,2]")));
+		assertThat(run(env.compile("[$value, $value]"))).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(MAPPER.readTree("[1,2]")));
 	}
 
 	@Test
@@ -72,13 +70,13 @@ public class RuntimeBindingsTest {
 				.setVariable("value", () -> JSON_PROVIDER.createNumber(overrideCounter.incrementAndGet()))
 				.build();
 
-		assertEquals(0, overrideCounter.get());
-		assertThat(run(query, bindings)).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(MAPPER.readTree("[1,2]")));
-		assertEquals(2, overrideCounter.get());
+		assertThat(overrideCounter.get()).isEqualTo(0);
+		assertThat(run(query, bindings)).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(MAPPER.readTree("[1,2]")));
+		assertThat(overrideCounter.get()).isEqualTo(2);
 	}
 
 	@Test
-	public void doesNotEvaluateUnusedOverrideSupplier() throws Exception {
+	public void doesNotEvaluateUnusedOverrideSupplier() {
 		AtomicInteger counter = new AtomicInteger();
 		Environment<JsonNode> env = EnvironmentBuilder.withDefaultLoaders(JSON_PROVIDER, Versions.JQ_1_7)
 				.declareVariable("value")
@@ -88,11 +86,11 @@ public class RuntimeBindingsTest {
 				.build();
 
 		run(env.compile("."), bindings);
-		assertEquals(0, counter.get());
+		assertThat(counter.get()).isEqualTo(0);
 	}
 
 	@Test
-	public void reportsNullValueFromOverrideSupplier() throws Exception {
+	public void reportsNullValueFromOverrideSupplier() {
 		Environment<JsonNode> env = EnvironmentBuilder.withDefaultLoaders(JSON_PROVIDER, Versions.JQ_1_7)
 				.declareVariable("value")
 				.build();
@@ -100,8 +98,9 @@ public class RuntimeBindingsTest {
 				.setVariable("value", () -> null)
 				.build();
 
-		JsonQueryException error = assertThrows(JsonQueryException.class, () -> run(env.compile("$value"), bindings));
-		assertThat(error).hasMessageContaining("evaluated to null");
+		assertThatThrownBy(() -> run(env.compile("$value"), bindings))
+				.isInstanceOf(JsonQueryException.class)
+				.hasMessageContaining("evaluated to null");
 	}
 
 	@Test
@@ -122,49 +121,52 @@ public class RuntimeBindingsTest {
 				.setFunction(key, constantFunction("override-function"))
 				.build();
 
-		assertThat(run(query, firstCall)).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(MAPPER.readTree("[\"default-variable\",\"default-function\"]")));
-		assertThat(run(query, secondCall)).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(MAPPER.readTree("[\"override-variable\",\"override-function\"]")));
+		assertThat(run(query, firstCall)).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(MAPPER.readTree("[\"default-variable\",\"default-function\"]")));
+		assertThat(run(query, secondCall)).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(MAPPER.readTree("[\"override-variable\",\"override-function\"]")));
 	}
 
 	@Test
-	public void rejectsUnknownOverrides() throws Exception {
+	public void rejectsUnknownOverrides() {
 		Environment<JsonNode> env = EnvironmentBuilder.withDefaultLoaders(JSON_PROVIDER, Versions.JQ_1_7)
 				.defineConstant("known", JSON_PROVIDER.createNull())
 				.build();
 		JsonQuery<JsonNode> query = env.compile("$known");
-
-		JsonQueryException variableError = assertThrows(JsonQueryException.class,
-				() -> query.withRuntimeBindings(bindingsWithVariable("unknown", 1)));
-		assertThat(variableError).hasMessageContaining("$unknown");
+		assertThatThrownBy(() -> query.withRuntimeBindings(bindingsWithVariable("unknown", 1)))
+				.isInstanceOf(JsonQueryException.class)
+				.hasMessageContaining("$unknown");
 
 		RuntimeBindings<JsonNode> functionBindings = RuntimeBindings.<JsonNode>newBuilder()
 				.setFunction(FunctionSignature.of("unknown", 0), constantFunction("unused"))
 				.build();
-		JsonQueryException functionError = assertThrows(JsonQueryException.class, () -> query.withRuntimeBindings(functionBindings));
-		assertThat(functionError).hasMessageContaining("unknown/0");
+		assertThatThrownBy(() -> query.withRuntimeBindings(functionBindings))
+				.isInstanceOf(JsonQueryException.class)
+				.hasMessageContaining("unknown/0");
 	}
 
 	@Test
-	public void rejectsOverrideOfFixedValue() throws Exception {
+	public void rejectsOverrideOfFixedValue() {
 		Environment<JsonNode> env = EnvironmentBuilder.withDefaultLoaders(JSON_PROVIDER, Versions.JQ_1_7)
 				.defineConstant("known", JSON_PROVIDER.createNumber(1))
 				.build();
 		JsonQuery<JsonNode> query = env.compile("$known");
 
-		JsonQueryException error = assertThrows(JsonQueryException.class,
-				() -> query.withRuntimeBindings(bindingsWithVariable("known", 2)));
-		assertThat(error).hasMessageContaining("$known").hasMessageContaining("fixed value");
+		assertThatThrownBy(() -> query.withRuntimeBindings(bindingsWithVariable("known", 2)))
+				.isInstanceOf(JsonQueryException.class)
+				.hasMessageContaining("$known")
+				.hasMessageContaining("fixed value");
 	}
 
 	@Test
-	public void rejectsMissingDeclaredVariable() throws Exception {
+	public void rejectsMissingDeclaredVariable() {
 		Environment<JsonNode> env = EnvironmentBuilder.withDefaultLoaders(JSON_PROVIDER, Versions.JQ_1_7)
 				.declareVariable("value")
 				.build();
 		JsonQuery<JsonNode> query = env.compile("$value");
 
-		JsonQueryException error = assertThrows(JsonQueryException.class, () -> run(query));
-		assertThat(error).hasMessageContaining("$value").hasMessageContaining("must be supplied");
+		assertThatThrownBy(() -> run(query))
+				.isInstanceOf(JsonQueryException.class)
+				.hasMessageContaining("$value")
+				.hasMessageContaining("must be supplied");
 	}
 
 	@Test
@@ -175,13 +177,15 @@ public class RuntimeBindingsTest {
 				.build();
 		JsonQuery<JsonNode> query = env.compile("length");
 
-		JsonQueryException error = assertThrows(JsonQueryException.class, () -> run(query));
-		assertThat(error).hasMessageContaining("length").hasMessageContaining("must be supplied");
+		assertThatThrownBy(() -> run(query))
+				.isInstanceOf(JsonQueryException.class)
+				.hasMessageContaining("length")
+				.hasMessageContaining("must be supplied");
 
 		RuntimeBindings<JsonNode> bindings = RuntimeBindings.<JsonNode>newBuilder()
 				.setFunction(builtinCollision, constantFunction("overridden"))
 				.build();
-		assertThat(run(query, bindings)).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(MAPPER.readTree("\"overridden\"")));
+		assertThat(run(query, bindings)).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(MAPPER.readTree("\"overridden\"")));
 	}
 
 	@Test
@@ -194,10 +198,12 @@ public class RuntimeBindingsTest {
 		JsonQuery<JsonNode> bound = query.withRuntimeBindings(bindingsWithVariable("value", 1));
 		JsonQuery<JsonNode> reboundFromTheSameBase = query.withRuntimeBindings(bindingsWithVariable("value", 2));
 
-		assertThat(run(bound)).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(MAPPER.readTree("1")));
-		assertThat(run(reboundFromTheSameBase)).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(MAPPER.readTree("2")));
+		assertThat(run(bound)).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(MAPPER.readTree("1")));
+		assertThat(run(reboundFromTheSameBase)).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(MAPPER.readTree("2")));
 		// The base query never acquired bindings of its own, so it still demands them.
-		assertThat(assertThrows(JsonQueryException.class, () -> run(query))).hasMessageContaining("must be supplied");
+		assertThatThrownBy(() -> run(query))
+				.isInstanceOf(JsonQueryException.class)
+				.hasMessageContaining("must be supplied");
 	}
 
 	@Test
@@ -207,7 +213,7 @@ public class RuntimeBindingsTest {
 				.build();
 		JsonQuery<JsonNode> query = env.compile("10 as $value | $value");
 
-		assertThat(run(query, bindingsWithVariable("value", 20))).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(MAPPER.readTree("10")));
+		assertThat(run(query, bindingsWithVariable("value", 20))).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(MAPPER.readTree("10")));
 	}
 
 	@Test
@@ -223,7 +229,7 @@ public class RuntimeBindingsTest {
 				.setFunction(zeroArg, constantFunction("override"))
 				.build();
 
-		assertThat(run(query, bindings)).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(MAPPER.readTree("[\"override\",\"one\"]")));
+		assertThat(run(query, bindings)).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(MAPPER.readTree("[\"override\",\"one\"]")));
 	}
 
 	@Test
@@ -237,7 +243,7 @@ public class RuntimeBindingsTest {
 				.setFunction(variadic, constantFunction("override"))
 				.build();
 
-		assertThat(run(query, bindings)).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(MAPPER.readTree("[\"override\",\"override\"]")));
+		assertThat(run(query, bindings)).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(MAPPER.readTree("[\"override\",\"override\"]")));
 	}
 
 	@Test
@@ -254,9 +260,9 @@ public class RuntimeBindingsTest {
 				futures.add(executor.submit(() -> run(query, bindingsWithVariable("value", value))));
 			}
 			for (int i = 0; i < futures.size(); i++)
-				assertThat(futures.get(i).get()).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(JSON_PROVIDER.createNumber(i)));
+				assertThat(futures.get(i).get()).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(JSON_PROVIDER.createNumber(i)));
 		} finally {
-			executor.shutdownNow();
+			executor.shutdown();
 		}
 	}
 
