@@ -1,7 +1,6 @@
 package net.thisptr.jackson.jq.v2.core.internal.compile.opt;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -135,7 +134,7 @@ public class ConstantFoldingTest {
 		@Override
 		public <Context extends RuntimeContext, N> Expression<Context, N> bind(BindContext<N> ctx, List<Expression<Context, N>> args) {
 			JsonProvider<N> provider = ctx.getJsonProvider();
-			return FunctionBody.<Context, N>builder(args).usesInput(usesInput).build((frame, in, path, output) -> {
+			return FunctionBody.builder(args).usesInput(usesInput).build((frame, in, path, output) -> {
 				evaluations.incrementAndGet();
 				output.emit(usesInput ? in : provider.createNumber(1), UntrackedPath.getInstance());
 			});
@@ -208,17 +207,17 @@ public class ConstantFoldingTest {
 	}
 
 	private static @Nullable List<JsonNode> foldedValues(Expression<?, ?> expression) {
-		if (!(expression instanceof ConstantExpression<?, ?>))
+		if (!(expression instanceof ConstantExpression<?, ?> constExpr))
 			return null;
 		@SuppressWarnings("unchecked")
-		ConstantExpression<?, JsonNode> constant = (ConstantExpression<?, JsonNode>) expression;
+		ConstantExpression<?, JsonNode> constant = (ConstantExpression<?, JsonNode>) constExpr;
 		return constant.getConstantResults();
 	}
 
 	// --- folding replaces evaluation ------------------------------------------------------------
 
 	@Test
-	public void aConstantExpressionIsEvaluatedOnceAtCompileTimeAndNeverAgain() throws Exception {
+	public void aConstantExpressionIsEvaluatedOnceAtCompileTimeAndNeverAgain() {
 		Tick tick = new Tick();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("tick", 0), tick));
 
@@ -231,7 +230,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void anInputDependentExpressionIsEvaluatedEveryTime() throws Exception {
+	public void anInputDependentExpressionIsEvaluatedEveryTime() {
 		Tick echo = new Tick(/* usesInput */ true);
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("echo", 0), echo));
 
@@ -279,7 +278,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void foldingIsNotLimitedToFunctionArguments() throws Exception {
+	public void foldingIsNotLimitedToFunctionArguments() {
 		Tick tick = new Tick();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("tick", 0), tick));
 
@@ -296,7 +295,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void aConstantChildIsRewrittenInsideAnInputDependentParent() throws Exception {
+	public void aConstantChildIsRewrittenInsideAnInputDependentParent() {
 		Tick tick = new Tick();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("tick", 0), tick));
 
@@ -309,7 +308,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void aFoldedArgumentStillReachesBindAsAConstantExpression() throws Exception {
+	public void aFoldedArgumentStillReachesBindAsAConstantExpression() {
 		Probe probe = new Probe();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("probe", 1), probe));
 
@@ -334,7 +333,7 @@ public class ConstantFoldingTest {
 	 * past them.
 	 */
 	@Test
-	public void aConstructThatRebindsItsChildInputIsFoldedWhenWhatItRebindsFromIs() throws Exception {
+	public void aConstructThatRebindsItsChildInputIsFoldedWhenWhatItRebindsFromIs() {
 		Probe probe = new Probe();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("probe", 1), probe));
 
@@ -347,7 +346,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void aConstructThatRebindsItsChildInputStillDependsOnWhatItRebindsFrom() throws Exception {
+	public void aConstructThatRebindsItsChildInputStillDependsOnWhatItRebindsFrom() {
 		Probe probe = new Probe();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("probe", 1), probe));
 
@@ -362,7 +361,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void aConstantChildOfAnInputDependentPipeStillFolds() throws Exception {
+	public void aConstantChildOfAnInputDependentPipeStillFolds() {
 		Tick tick = new Tick();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("tick", 0), tick));
 
@@ -377,7 +376,7 @@ public class ConstantFoldingTest {
 	// --- the budget ------------------------------------------------------------------------------
 
 	@Test
-	public void aFoldIsAbandonedPastTheValueBudget() throws Exception {
+	public void aFoldIsAbandonedPastTheValueBudget() {
 		Probe probe = new Probe();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("probe", 1), probe));
 
@@ -392,7 +391,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void aNonTerminatingConstantExpressionDoesNotHangCompilation() throws Exception {
+	public void aNonTerminatingConstantExpressionDoesNotHangCompilation() {
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.emptyMap());
 		long started = System.nanoTime();
 		assertThatCode(() -> env.compile("[last(range(0; 1e9)), until(false; 1)]")).doesNotThrowAnyException();
@@ -402,7 +401,7 @@ public class ConstantFoldingTest {
 	// --- error timing ----------------------------------------------------------------------------
 
 	@Test
-	public void aConstantJqErrorIsFoldedAndReplayedAtEvaluationTime() throws Exception {
+	public void aConstantJqErrorIsFoldedAndReplayedAtEvaluationTime() {
 		AtomicInteger evaluations = new AtomicInteger();
 		Function fail = new Function() {
 			@Override
@@ -424,7 +423,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void valuesBeforeAConstantErrorAreFoldedAndReplayedInOrder() throws Exception {
+	public void valuesBeforeAConstantErrorAreFoldedAndReplayedInOrder() {
 		AtomicInteger evaluations = new AtomicInteger();
 		Function fail = new Function() {
 			@Override
@@ -448,7 +447,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void aDownstreamErrorStopsReplayBeforeTheStoredError() throws Exception {
+	public void aDownstreamErrorStopsReplayBeforeTheStoredError() {
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.emptyMap());
 		JsonQuery<JsonNode> query = env.compile("1, error(\"stored\")");
 
@@ -458,7 +457,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void anErrorEndingArgumentIsNotExposedAsAConstantExpression() throws Exception {
+	public void anErrorEndingArgumentIsNotExposedAsAConstantExpression() {
 		Probe probe = new Probe();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("probe", 1), probe));
 
@@ -472,7 +471,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void runtimeLimitErrorsAreNotFolded() throws Exception {
+	public void runtimeLimitErrorsAreNotFolded() {
 		AtomicInteger evaluations = new AtomicInteger();
 		Function limit = new Function() {
 			@Override
@@ -492,7 +491,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void foldedBreakRetainsItsControlFlowSubtype() throws Exception {
+	public void foldedBreakRetainsItsControlFlowSubtype() {
 		Probe probe = new Probe();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("probe", 1), probe));
 
@@ -503,7 +502,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void aFunctionThatThrowsSomethingOtherThanJsonQueryExceptionDoesNotBreakCompilation() throws Exception {
+	public void aFunctionThatThrowsSomethingOtherThanJsonQueryExceptionDoesNotBreakCompilation() {
 		Function explode = new Function() {
 			@Override
 			public <Context extends RuntimeContext, N> Expression<Context, N> bind(BindContext<N> ctx, List<Expression<Context, N>> args) {
@@ -521,7 +520,7 @@ public class ConstantFoldingTest {
 	// --- barriers ---------------------------------------------------------------------------------
 
 	@Test
-	public void aSubtreeThatInstallsADefIsNotFolded() throws Exception {
+	public void aSubtreeThatInstallsADefIsNotFolded() {
 		Probe probe = new Probe();
 		Map<FunctionSignature, Function> functions = Collections.singletonMap(FunctionSignature.of("probe", 1), probe);
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, functions);
@@ -541,7 +540,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void aTryIsNotFoldedBeforeJq17BecauseItCatchesWhatItsConsumerThrows() throws Exception {
+	public void aTryIsNotFoldedBeforeJq17BecauseItCatchesWhatItsConsumerThrows() {
 		Probe legacy = new Probe();
 		env(Versions.JQ_1_6, Collections.singletonMap(FunctionSignature.of("probe", 1), legacy)).compile("probe(try 1 catch .)");
 		assertThat(foldedValues(legacy.arguments.get(0)))
@@ -559,7 +558,7 @@ public class ConstantFoldingTest {
 	// --- path mode --------------------------------------------------------------------------------
 
 	@Test
-	public void aFoldedExpressionStepsAsideWhenAPathIsBeingTracked() throws Exception {
+	public void aFoldedExpressionStepsAsideWhenAPathIsBeingTracked() {
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.emptyMap());
 
 		// Evaluated for its value `[] | .c?` yields nothing, which is what the folder collects. Asked for a
@@ -578,7 +577,7 @@ public class ConstantFoldingTest {
 	// --- the budget is the caller's ---------------------------------------------------------------
 
 	@Test
-	public void raisingMaxResultsFoldsWhatTheDefaultRefuses() throws Exception {
+	public void raisingMaxResultsFoldsWhatTheDefaultRefuses() {
 		Probe probe = new Probe();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("probe", 1), probe));
 
@@ -593,7 +592,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void loweringMaxResultsRefusesWhatTheDefaultFolds() throws Exception {
+	public void loweringMaxResultsRefusesWhatTheDefaultFolds() {
 		Probe probe = new Probe();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("probe", 1), probe));
 
@@ -605,7 +604,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void theEmbeddedRuntimeOptionsBoundWhatAFoldMayBuild() throws Exception {
+	public void theEmbeddedRuntimeOptionsBoundWhatAFoldMayBuild() {
 		Probe probe = new Probe();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("probe", 1), probe));
 
@@ -628,7 +627,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void foldingCanBeTurnedOff() throws Exception {
+	public void foldingCanBeTurnedOff() {
 		Tick tick = new Tick();
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.singletonMap(FunctionSignature.of("tick", 0), tick));
 
@@ -644,7 +643,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void turningFoldingOffPutsConstantWorkBackUnderTheCallersRuntimeOptions() throws Exception {
+	public void turningFoldingOffPutsConstantWorkBackUnderTheCallersRuntimeOptions() {
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.emptyMap());
 		RuntimeOptions maxArrayLength100 = RuntimeOptions.newBuilder().setMaxArrayLength(100).build();
 
@@ -662,7 +661,7 @@ public class ConstantFoldingTest {
 	}
 
 	@Test
-	public void theDerivedTotalStillBoundsOneCompilation() throws Exception {
+	public void theDerivedTotalStillBoundsOneCompilation() {
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.emptyMap());
 
 		// A constant term the folder refuses on size, so every enclosing fold attempt re-runs it from
@@ -671,8 +670,7 @@ public class ConstantFoldingTest {
 		for (int i = 0; i < 200; i++)
 			query.append(i == 0 ? "" : ", ").append("reduce range(0; 300) as $x (0; .)");
 		query.append("]");
-		for (int i = 0; i < 200; i++)
-			query.append(" | .");
+		query.append(" | .".repeat(200));
 
 		long started = System.nanoTime();
 		assertThatCode(() -> env.compile(query.toString())).doesNotThrowAnyException();
@@ -682,9 +680,9 @@ public class ConstantFoldingTest {
 	// --- folding is not visible in results --------------------------------------------------------
 
 	@Test
-	public void foldingPreservesValuesAndOrder() throws Exception {
+	public void foldingPreservesValuesAndOrder() {
 		Environment<JsonNode> env = env(Versions.JQ_1_8_2, Collections.emptyMap());
-		for (String[] pair : Arrays.asList(
+		for (String[] pair : List.of(
 				new String[] { "[limit(2; 1, 2, 3)]", "[1,2]" },
 				new String[] { "[range(0; 3)]", "[0,1,2]" },
 				new String[] { "\"\\(1 + 1)\"", "\"2\"" },
