@@ -1,7 +1,6 @@
 package net.thisptr.jackson.jq.v2.ext.debug;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -32,7 +31,7 @@ import net.thisptr.jackson.jq.v2.spi.version.Version;
 import static org.assertj.core.api.Assertions.assertThat;
 
 public class DebugModuleTest {
-	private static final BindContext<JsonNode> BIND_CONTEXT = new BindContext<JsonNode>() {
+	private static final BindContext<JsonNode> BIND_CONTEXT = new BindContext<>() {
 		@Override
 		public JsonProvider<JsonNode> getJsonProvider() {
 			return Jackson2JsonProvider.getInstance();
@@ -257,7 +256,7 @@ public class DebugModuleTest {
 		Function fn = Objects.requireNonNull(module.getFunctions().get(FunctionSignature.of("dump_expr", 1)));
 		@SuppressWarnings("unchecked")
 		Expression<RuntimeContext, JsonNode> castArg = (Expression<RuntimeContext, JsonNode>) argument;
-		Expression<RuntimeContext, JsonNode> expression = fn.bind(BIND_CONTEXT, Arrays.asList(castArg));
+		Expression<RuntimeContext, JsonNode> expression = fn.bind(BIND_CONTEXT, List.of(castArg));
 		List<JsonNode> results = new ArrayList<>();
 		expression.apply(() -> RuntimeLimitsImpl.UNLIMITED, Jackson2JsonProvider.getInstance().createNull(), UntrackedPath.getInstance(), (val, path) -> results.add(val));
 		assertThat(results).hasSize(1);
@@ -268,11 +267,8 @@ public class DebugModuleTest {
 		int n = arity == null ? 0 : arity;
 		List<Expression<Context, JsonNode>> args = new ArrayList<>();
 		for (int i = 0; i < n; ++i) {
-			args.add(new Expression<Context, JsonNode>() {
-				@Override
-				public void apply(Context context, JsonNode in, Path<JsonNode> ipath, Output<JsonNode> output) {
-					throw new UnsupportedOperationException();
-				}
+			args.add((context, in, ipath, output) -> {
+				throw new UnsupportedOperationException();
 			});
 		}
 		return args;
@@ -292,7 +288,7 @@ public class DebugModuleTest {
 			}
 		};
 		private final Expression<RuntimeContext, JsonNode> self = this;
-		private final List<Object> values = Arrays.asList(this, "scalar-value");
+		private final List<Object> values = List.of(this, "scalar-value");
 
 		@Override
 		public boolean dependsOnInput() {
