@@ -6,7 +6,6 @@ import java.nio.charset.CharacterCodingException;
 import java.nio.charset.Charset;
 import java.nio.charset.CodingErrorAction;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -25,15 +24,15 @@ import net.thisptr.jackson.jq.v2.spi.path.Path;
 import net.thisptr.jackson.jq.v2.spi.path.UntrackedPath;
 
 public final class JsonWriteFunction implements Function {
-	private static final Set<String> ALLOWED_OPTIONS = new HashSet<>(Arrays.asList("indent", "encoding", "append", "newline", "create_parents", "mkdirs"));
+	private static final Set<String> ALLOWED_OPTIONS = new HashSet<>(List.of("indent", "encoding", "append", "newline", "create_parents", "mkdirs"));
 	private static final Options DEFAULT_OPTIONS = new Options(null, StandardCharsets.UTF_8, false, true, false);
 
 	@Override
 	public <Context extends RuntimeContext, JsonNode> Expression<Context, JsonNode> bind(BindContext<JsonNode> bindContext, List<Expression<Context, JsonNode>> arguments) {
 		JsonProvider<JsonNode> jsonProvider = bindContext.getJsonProvider();
 		Expression<Context, JsonNode> pathExpression = arguments.get(0);
-		@Nullable Expression<Context, JsonNode> optionsExpression = arguments.size() == 2 ? arguments.get(1) : null;
-		return new Expression<Context, JsonNode>() {
+		Expression<Context, JsonNode> optionsExpression = arguments.size() == 2 ? arguments.get(1) : null;
+		return new Expression<>() {
 			@Override
 			public Cardinality getCardinality() {
 				Cardinality pathCardinality = pathExpression.getCardinality();
@@ -68,7 +67,7 @@ public final class JsonWriteFunction implements Function {
 					optionsExpression.apply(context, input, inputPath, (optionsNode, optionsPath) -> {
 						Options options = parseOptions(jsonProvider, optionsNode);
 						byte[] bytes = formatAndEncode(jsonProvider, input, options);
-						FileFunctionSupport.write(file, bytes, options.append, options.createParents, "fs::write_json");
+						FileFunctionSupport.write(file, bytes, options.append(), options.createParents(), "fs::write_json");
 						output.emit(jsonProvider.createNull(), UntrackedPath.getInstance());
 					});
 				});
@@ -87,9 +86,9 @@ public final class JsonWriteFunction implements Function {
 	}
 
 	private static <JsonNode> byte[] formatAndEncode(JsonProvider<JsonNode> jsonProvider, JsonNode input, Options options) {
-		String formatted = JsonPrettyPrinter.print(jsonProvider, input, options.indent);
-		String text = options.newline ? formatted + "\n" : formatted;
-		return encode(text, options.encoding);
+		String formatted = JsonPrettyPrinter.print(jsonProvider, input, options.indent());
+		String text = options.newline() ? formatted + "\n" : formatted;
+		return encode(text, options.encoding());
 	}
 
 	private static byte[] encode(String text, Charset charset) {
@@ -106,19 +105,7 @@ public final class JsonWriteFunction implements Function {
 		}
 	}
 
-	private static final class Options {
-		private final @Nullable String indent;
-		private final Charset encoding;
-		private final boolean append;
-		private final boolean newline;
-		private final boolean createParents;
-
-		private Options(@Nullable String indent, Charset encoding, boolean append, boolean newline, boolean createParents) {
-			this.indent = indent;
-			this.encoding = encoding;
-			this.append = append;
-			this.newline = newline;
-			this.createParents = createParents;
-		}
+	private record Options(@Nullable String indent, Charset encoding, boolean append, boolean newline,
+						   boolean createParents) {
 	}
 }
